ic-more-changes

--- a/html/ivens-craft/ic-returning_south.html
+++ b/html/ivens-craft/ic-returning_south.html
@@ -65,7 +65,7 @@
 			<section class="page-details horizontal">
 				<figure class="image-wrapper">
 					<!-- img sizes calculated using https://ausi.github.io/respimagelint/ -->
-					<img width="698" height="437" src="/img/ivens-craft/liv_028024_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028024_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028024_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028024_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028024_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028024_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028024_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="Two men sitting outside a log cabin with a woman standing in the doorway." /><!-- Change -->
+					<img width="698" height="537" src="/img/ivens-craft/liv_028134_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028134_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028134_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028134_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028134_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028134_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028134_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="A group of people gather around a table as a soldier reads a large piece of paper by torchlight." /><!-- Change -->
 					<figcaption class="caption-icon mobile">
 						<span class="tooltip-container">
 							<a class="caption" href="#credits" aria-label="Go to image details" aria-describedby="caption-icon-1" data-tooltip-trigger><i class="fa fa-info-circle" aria-hidden="true"></i></a>
@@ -160,12 +160,6 @@
 						<p>“The son of those runaway fugitive slaves William and Ellen Craft has just passed the first examination of Cambridge university, England,” boasted Maine’s <em>Sun-Journal</em> in March of 1871. The following month, the <em>New York Examiner and Chronicle</em> announced that, “W. J. Craft, son of William and Ellen Craft, whose escape from slavery some years ago made such a sensation, has passed the first examination of Cambridge University, England.” The news even made its way into <em>Harper’s Bazaar</em>: “Among the boys who have passed the first examination of Cambridge University, England, is W. J. Craft. He is the son of WILLIAM and ELLEN CRAFT, now in Georgia – a State from which they escaped as fugitive slaves years ago” (Anonymous 1871a; Anonymous 1871b; Anonymous 1871c).</p>
 
 						<p>William Ivens represented to both newly freed African Americans and their white supporters the potential for advancement were Black men and women given the opportunity, and the community held him up for his accomplishments.</p>
-
-						<img loading="lazy" class="illustration" width="700" height="640" src="/img/ivens-craft/liv_028005_0001_deriv-1400px.jpg" srcset="/img/ivens-craft/liv_028005_0001_deriv-286px.jpg 286w, /img/ivens-craft/liv_028005_0001_deriv-446px.jpg 446w, /img/ivens-craft/liv_028005_0001_deriv-572px.jpg 572w, /img/ivens-craft/liv_028005_0001_deriv-634px.jpg 634w, /img/ivens-craft/liv_028005_0001_deriv-700px.jpg 700w, /img/ivens-craft/liv_028005_0001_deriv-892px.jpg 892w, /img/ivens-craft/liv_028005_0001_deriv-1268px.jpg 1268w, /img/ivens-craft/liv_028005_0001_deriv-1400px.jpg 1400w" sizes="min-width: 992px) 700px, (min-width: 768px) 634px, calc(100vw - 34px)" alt="Group of men stand on a hill in front of boats in a harbor in the background." />
-
-						<p class="caption-text">Bell & Bro., “<a aria-label="External Link" href="https://www.loc.gov/item/2002723683/">‘Baltimore Harbor, Baltimore M.D.’</a>” (Photograph, [1870]), STEREO U.S. GEOG FILE - Maryland--Baltimore--Harbor [item] [P&P], Library of Congress, Washington, United States. No known restrictions on publication. William Ivens and Brougham might have seen something similar to this view as they stepped down the gangplank and entered the US for the first time. They also for the first time likely encountered populations of other free Black people in the city of Baltimore, which they stayed in only briefly before heading to the nation's capital.</p>
-
-						<p>After ostensibly finishing their schooling in England, the two brothers left their home and traveled to the United States to join their family. On 3 March 1873, sixteen-year-old Brougham and eighteen-year-old William arrived aboard the ship <em>Manitoba</em> at Baltimore and set foot on American soil for the first time. They reported upon arrival that they intended to head to Savannah, most likely to join their family (“‘Manitoba’ Passenger List” 1873). What they found stood in stark contrast to their lives in London.</p>					
 					</section>
 
 					<aside class="credits" aria-labelledby="citation">
@@ -181,9 +175,9 @@
 					<aside id="credits" class="credits" aria-labelledby="image-details">
 						<h3 id="image-details">Lead Image Details</h3>
 
-						<p id="caption"><strong>Lead image caption:</strong> Launey &amp; Goebel Photographers, “<a aria-label="External Link" href="https://www.loc.gov/resource/ppmsca.39591/">Savannah, Ga., Early Negro Life</a>” (Photograph, c.1867-1890), Library of Congress, Prints and Photographs Division, LC-DIG-ppmsca-39591. No known restrictions on publication.</p><!-- Change -->
+						<p id="caption"><strong>Lead image caption:</strong> James E. Watts, Engraver, Henry Walker Herrick, and Lucius Stebbins, “<a aria-label="External Link" href="https://www.loc.gov/resource/pga.08518/">Reading the Emancipation Proclamation</a>” (Image, [c.1864]), Library of Congress, Prints and Photographs Division, Washington,. No known restrictions on publication.</p><!-- Change -->
 
-						<p><strong>Lead image commentary:</strong> This image depicts men and women outside a small farmhouse near Savannah, Georgia, during the era of Reconstruction. The Craft family, too, upon their return from England, passed the years of Reconstruction  near Savannah, Georgia, where they sought to provide education and otherwise help ‘uplift’ newly freedpeople in the American South.</p><!-- Change -->
+						<p><strong>Lead image commentary:</strong> This engraving sought to capture the moment freedom reached the ears of enslaved people in the American South, supposedly via a reading of the Emancipation Proclamation by a US soldier. Despite the gratitude and hope etched onto the faces of the newly freedpeople by the artist, it was often enslaved people who emancipated themselves from the violence of slavery throughout the Civil War – as the Crafts had done not twenty years earlier.</p><!-- Change -->
 					</aside>
 				</article>
 				<div class="decoration"></div>
