--- a/html/ivens-craft/ic-reconstruction.html
+++ b/html/ivens-craft/ic-reconstruction.html
@@ -66,6 +66,7 @@
 				<figure class="image-wrapper">
 					<!-- img sizes calculated using https://ausi.github.io/respimagelint/ -->
 					<img width="698" height="573" src="/img/ivens-craft/liv_028109_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028109_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028109_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028109_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028109_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028109_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028109_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="Group of men and women standing on a lawn in front of large stone building." /><!-- Change -->
+					<img width="698" height="437" src="/img/ivens-craft/liv_028024_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028024_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028024_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028024_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028024_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028024_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028024_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="Two men sitting outside a log cabin with a woman standing in the doorway." /><!-- Change -->
 					<figcaption class="caption-icon mobile">
 						<span class="tooltip-container">
 							<a class="caption" href="#credits" aria-label="Go to image details" aria-describedby="caption-icon-1" data-tooltip-trigger><i class="fa fa-info-circle" aria-hidden="true"></i></a>
@@ -99,7 +100,7 @@
 						<ol aria-label="Menu">
 							<li><a href="#introduction">Introduction</a></li>
 							<li><a href="#cooperation">Dreams of Cooperation</a></li><!-- Change -->
-							<li><a href="#burning">The Burning of Hickory Hill</a></li><!-- Change -->
+							<li><a href="#burning">The Burning of Hickory Hill and Founding of Woodville</a></li><!-- Change -->
 							<li><a href="#citation">Page Citation</a></li>
 							<li><a href="#image-details">Lead Image Details</a></li>
 						</ol>
@@ -108,7 +109,7 @@
 					<section aria-labelledby="introduction"><!-- Change -->
 						<h3 id="introduction">Introduction</h3><!-- Change -->
 
-						<p>William Ivens Craft arrived into a foreign world when he joined his family in the United States. The Crafts aimed to develop a farming school that encouraged cooperation among newly freedpeople and also disrupted the white-controlled labor systems sweeping the former slave states. The Craft’s efforts, however, met with white supremacist violent backlash, as William Ivens navigated the new, complex, and racist American society.</p>
+						<p>Never quiescent, the Craft family continued to fight for the lives and livelihoods of Black Southerners. The Crafts aimed to develop a farming school that encouraged cooperation among newly freedpeople and also disrupted the white-controlled labor systems sweeping the former slave states. The Crafts’ efforts, however, met with white supremacist violent backlash.</p>
 					</section>
 
 					<section aria-labelledby="cooperation"><!-- Change -->
@@ -133,7 +134,7 @@
 					</section>
 
 					<section aria-labelledby="burning"><!-- Change -->
-						<h3 id="burning">The Burning of Hickory Hill</h3><!-- Change -->
+						<h3 id="burning">The Burning of Hickory Hill and Founding of Woodville</h3><!-- Change -->
 
 						<p>After only one year of farming, however, Hickory Hill – a farm co-operated and leased by two Black men in Reconstruction-era Georgia – erupted into flames one night. William Craft later reported that “the kuklux [sic] burned the buildings at Hickory Hill.” Ellen remembered the terrifying night. She hurried the children out of the burning building, wearing only their night clothes. She managed to save some of their money from the conflagration (Anonymous 1878b; Anonymous 1878c).</p>
 
@@ -144,12 +145,22 @@
 							<p class="caption-text">Philip M. Russell, “‘<a aria-label="External Link" href="https://lcdl.library.cofc.edu/lcdl/catalog/lcdl:39956">Woodville Plantation Deed, 1873</a>’” (Manuscript, [1873]), AMN 1102, Avery Research Center, Charleston, United States. Courtesy of Avery Research Center for African American History and Culture, College of Charleston Libraries. All rights reserved. The deed for the Woodville Co-Operative Farm School is extant today in the collection held by the Avery Research Center. The Crafts sought this lease after the KKK, in act of terror and intimidation, burned the family's first educational project. The Crafts were not deterred.</p>
 
 						<p>With hardened resolve, William and Ellen next established Woodville Co-Operative Farm School in their home state of Georgia (Sterling 1988, 52). The Crafts also started a free school on the property, which was at the time the only school in Bryan County – a seaboard county consisting of large rice and cotton plantations, and one that had a majority-Black population (Blackett 1983, 61; Blackett 1986, 125).</p>
+	
+						<p>By 1875, although it had put the family into debt, Woodville seemed to be blossoming. The Crafts built a large schoolhouse attended by upwards of 75 students. At least sixteen families lived on the property, farming cotton, rice, and corn (Craft 1875). Ellen and Brougham taught in the school, seldom receiving compensation. Brougham had earned certificates for teaching from school committees in Georgia and Florida. Though some of the scholars had promised to pay, recalled Brougham, he “never got anything from them, except four red birds” (Anonymous 1878d).</p>
+	
+						<span class="center vertical">
+							<img loading="lazy" class="illustration" width="624" height="799" src="/img/ivens-craft/liv_028065_0001_deriv-908px.jpg" srcset="/img/ivens-craft/liv_028065_0001_deriv-200px.jpg 200w, /img/ivens-craft/liv_028065_0001_deriv-312px.jpg 312w, /img/ivens-craft/liv_028065_0001_deriv-400px.jpg 400w, /img/ivens-craft/liv_028065_0001_deriv-444px.jpg 444w, /img/ivens-craft/liv_028065_0001_deriv-490px.jpg 490w, /img/ivens-craft/liv_028065_0001_deriv-624px.jpg 624w, /img/ivens-craft/liv_028065_0001_deriv-888px.jpg 888w, /img/ivens-craft/liv_028065_0001_deriv-980px.jpg 980w" sizes="(min-width: 992px) calc(700 * .7), (min-width: 768px) calc(634 * .7), (min-width: 480px) calc(.7 * (100vw - 34px)), calc(100vw - 34px)" alt="Portrait of a man in a suit looking directly at the camera." />
+							</span>
+								
+							<p class="caption-text">Anonymous, “<a aria-label="External Link" href="https://lcdl.library.cofc.edu/lcdl/catalog/lcdl:39896">Charles P. Craft Portrait</a>” (Photograph, [c.1860-1938]), AMN 1102, Avery Research Center, Charleston, United States. Courtesy of Avery Research Center for African American History and Culture, College of Charleston Libraries. All rights reserved. This is one of 7 images published by this project, all of which exhibit the same material characteristics due to coming from a single album held by the Avery Research Center. This photo of Charles Estlin Philips Craft, William Ivens' eldest brother and the firstborn of the Craft children, as a young man likely depicts him as he looked when he worked with his brothers for the Post Office Rail Service.</p>
+	
+						<p>The Craft family also became involved in Reconstruction politics, joining the Republican Party in Georgia. William Craft, in 1873, applied for the office of Minister to Liberia, “with good prospects” the <em>Augusta Chronicle</em> reported (Anonymous 1873). The next year, he ran for state Senate in Georgia as a Republican (Anonymous 1874a). Both campaigns proved unsuccessful. However, in 1876, William represented Bryan County at the Georgia Republican State Convention. There, he was elected as an alternate delegate to the Republican National Convention (Blackett 1986, 129; Anonymous 1876a). Politics was a family affair. In Savannah, William Ivens’ older brother, Charles, was president of the Union Coterie club (Craft 1876).</p>
 					</section>
 
 					<aside class="credits" aria-labelledby="citation">
 						<h3 id="citation">Page Citation</h3>
 
-						<p><strong>Cite (MLA):</strong> McCaffrey, Hope. “William Ivens Craft in the Reconstruction-Era American South” (2024). “William Ivens Craft and the Transatlantic Victorian World,” <em>One More Voice</em>, solidarity edition, 2022-24, <a href="/html/ivens-craft/ic-reconstruction.html">https://onemorevoice.org/html/ivens-craft/ic-reconstruction.html</a>.</p><!-- Change -->
+						<p><strong>Cite (MLA):</strong> McCaffrey, Hope. “The Crafts in the Reconstruction-Era American South” (2024). “William Ivens Craft and the Transatlantic Victorian World,” <em>One More Voice</em>, solidarity edition, 2022-24, <a href="/html/ivens-craft/ic-reconstruction.html">https://onemorevoice.org/html/ivens-craft/ic-reconstruction.html</a>.</p><!-- Change -->
 					
 						<p><strong>Rights:</strong> <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a></p>
 
@@ -159,9 +170,9 @@
 					<aside id="credits" class="credits" aria-labelledby="image-details">
 						<h3 id="image-details">Lead Image Details</h3>
 
-						<p id="caption"><strong>Lead image caption:</strong> John W. Moulton; John S. Moulton, “<a aria-label="External Link" href="https://www.loc.gov/item/2017657067/">Howard University</a>” (Photograph, c.1867-1920), Library of Congress, Prints & Photographs Division, LC-DIG-stereo-1s07887. No known restrictions on publication.</p><!-- Change -->
+						<p id="caption"><strong>Lead image caption:</strong> Launey &amp; Goebel Photographers, “<a aria-label="External Link" href="https://www.loc.gov/resource/ppmsca.39591/">‘Savannah, Ga., Early Negro Life’</a>” (Photograph, [c.1867-1890]), Library of Congress Prints and Photographs Division Washington, D.C. 20540 USA. LOT 14105, no. 10 [P&P]. No known restrictions on publication.</p><!-- Change -->
 
-						<p><strong>Lead image commentary:</strong> This photograph shows a large group of men and women, presumably students, standing on the lawn in front of Howard University in Washington, D. C. This photo captured the school as it looked in the late nineteenth century, as it might have when Brougham Craft, William Ivens’ brother, attended for a stint in the 1870s while the two lived in Washington, D. C. It is possible, though we have no record of it, that William Ivens also went to school at Howard while in that city, surrounded by the flourishing Black intellectual and political culture.</p><!-- Change -->
+						<p><strong>Lead image commentary:</strong> This image depicts men and women outside a small farmhouse near Savannah, Georgia, during the era of Reconstruction. The Craft family, too, upon their return from England, passed the years of Reconstruction  near Savannah, Georgia, where they sought to provide education and otherwise help ‘uplift’ newly freedpeople in the American South.</p><!-- Change -->
 					</aside>
 				</article>
 				<div class="decoration"></div>
