--- a/html/ivens-craft/ic-parents_escape.html
+++ b/html/ivens-craft/ic-parents_escape.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8"/>
-		<title>William and Ellen's Daring Escape | One More Voice</title>
+		<title>William and Ellen’s Daring Escape | One More Voice</title>
 		<meta name="description" content="Recounts the Crafts' escape from slavery and their transatlantic journey to freedom." />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
@@ -42,7 +42,7 @@
 					<li id="level-1"><a href="/">Home</a></li>
 					<li id="level-2"><a href="/html/materials.html">Historical Materials</a></li>
 					<li id="level-3"><a href="/html/ivens-craft/ic-home.html">William Ivens Craft and the Victorian Atlantic World</a></li>
-					<li id="level-4">William and Ellen's Daring Escape</li>
+					<li id="level-4">William and Ellen’s Daring Escape</li>
 				</ul>
 			</nav>
 			<div class="nav-container" data-include="header">
@@ -76,7 +76,7 @@
 
 				<div>
 					<span>
-						<h2 id="parents-escape">William and Ellen's Daring Escape</h2>
+						<h2 id="parents-escape">William and Ellen’s Daring Escape</h2>
 						<ul class="publication-details">
 							<li><span>Date (publication and updates):</span> <strong>2024</strong></li>
 						</ul>
@@ -174,7 +174,7 @@
 					<aside class="credits" aria-labelledby="citation">
 						<h3 id="citation">Page Citation</h3>
 
-						<p><strong>Cite (MLA):</strong> McCaffrey, Hope. “William and Ellen's Daring Escape” (2024). “William Ivens Craft and the Transatlantic Victorian World,” <em>One More Voice</em>, solidarity edition, 2022-24, <a href="/html/ivens-craft/ic-parents_escape.html">https://onemorevoice.org/html/ivens-craft/ic-parents_escape.html</a>.</p><!-- Change -->
+						<p><strong>Cite (MLA):</strong> McCaffrey, Hope. “William and Ellen’s Daring Escape” (2024). “William Ivens Craft and the Transatlantic Victorian World,” <em>One More Voice</em>, solidarity edition, 2022-24, <a href="/html/ivens-craft/ic-parents_escape.html">https://onemorevoice.org/html/ivens-craft/ic-parents_escape.html</a>.</p><!-- Change -->
 					
 						<p><strong>Rights:</strong> <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a></p>
 
