--- a/html/ivens-craft/ic-contributors_collaborators.html
+++ b/html/ivens-craft/ic-contributors_collaborators.html
@@ -100,6 +100,7 @@
 						<ol aria-label="Menu">
 							<li><a href="#developers">Developers</a></li>
 							<li><a href="#contributors">Contributors</a></li>
+							<li><a href="#advisors">Scholarly Advisors</a></li>
 							<li><a href="#archives">Archives and Websites</a></li>
 							<li><a href="#citation">Page Citation</a></li>
 							<li><a href="#image-details">Lead Image Details</a></li>
@@ -133,6 +134,15 @@
 						</ul>
 					</section>
 
+					<section aria-labelledby="advisors">
+						<h3 id="advisors">Scholarly Advisors</h3>
+
+						<ul class="nostyle-list indented-list padded-list">
+							<li><strong></strong> </li>
+							<li><strong></strong> </li>
+						</ul>
+					</section>			
+					
 					<section aria-labelledby="archives">
 						<h3 id="archives">Archives and Websites</h3>
 
@@ -141,7 +151,10 @@
 							<li><a aria-label="External Link" href="https://avery.cofc.edu/">Avery Research Center, College of Charleston</a> (Charleston, NC, USA)</li>
 							<li><a aria-label="External Link" href="https://www.bodleian.ox.ac.uk/home">Bodleian Library and Archives</a> (Oxford, UK)</li>
 							<li><a aria-label="External Link" href="https://www.loc.gov/">Library of Congress</a> (Washington, D.C., USA)</li>
-							<li>Martin Copeland Personal Archive (South of London, UK)</li>
+							<li>Martin Copeland Personal Archive (UK)</li>
+							<li>Chris Clark Personal Archive (UK)</li>
+							<li>Hope McCaffrey Personal Archive (USA)</li>
+							<li>Maureen Barnes Personal Archive (UK)</li>
 							<li><a aria-label="External Link" href="https://commons.wikimedia.org">Wikimedia Commons</a></li>
 						</ul>
 					</section>					
