--- a/html/recovering-histories/liv_022001_HTML.html
+++ b/html/recovering-histories/liv_022001_HTML.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <title>[Treaty/Agreement of 10 and 15 August 1904] | One More Voice</title>
-<meta name="description" content="."><!-- Change -->
+<meta name="description" content="Treaty between Maasai leaders and British East Africa Protectorate, agreeing to move Maasai tribes to reservations away from railway and European settlement areas.">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="robots" content="index, follow">
 <meta name="theme-color" content="#204A79">
@@ -34,7 +34,7 @@
 <ul>
 <li id="level-1"><a href="/">Home</a></li>
 <li id="level-2"><a href="/html/materials.html">Historical Materials</a></li>
-<!-- <li id="level-3"><a href="/html/recovering-histories/rh-home.html">Recovering the Histories of Land Treaties</a></li> -->
+<li id="level-3"><a href="/html/recovering-histories/rh-home.html">Recovering the Histories of Land Treaties in East and Southern Africa</a></li>
 <li id="level-4">[Treaty/Agreement of 10 and 15 August 1904]</li>
 </ul>
 </nav>
