--- a/html/recovering-histories/liv_022002_HTML.html
+++ b/html/recovering-histories/liv_022002_HTML.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <title>[Treaty/Agreement of 4 and 13 April 1911] | One More Voice</title>
-<meta name="description" content="."><!-- Change -->
+<meta name="description" content="Treaty between Maasai leaders and British East Africa Protectorate, agreeing to relocate Maasai from Northern Reserve to a unified area south of Uganda Railway.">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="robots" content="index, follow">
 <meta name="theme-color" content="#204A79">
@@ -34,7 +34,7 @@
 <ul>
 <li id="level-1"><a href="/">Home</a></li>
 <li id="level-2"><a href="/html/materials.html">Historical Materials</a></li>
-<!-- <li id="level-3"><a href="/html/recovering-histories/rh-home.html">Recovering the Histories of Land Treaties</a></li> -->
+<li id="level-3"><a href="/html/recovering-histories/rh-home.html">Recovering the Histories of Land Treaties in East and Southern Africa</a></li>
 <li id="level-4">[Treaty/Agreement of 4 and 13 April 1911]</li>
 </ul>
 </nav>
