--- a/html/recovering-histories/liv_022003_HTML.html
+++ b/html/recovering-histories/liv_022003_HTML.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <title>“High Commissioner's Notice” | One More Voice</title>
-<meta name="description" content="."><!-- Change -->
+<meta name="description" content="1885 notice by British High Commissioner declaring establishment of protectorate over Bechuanaland and Kalahari, defining its geographical boundaries.">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="robots" content="index, follow">
 <meta name="theme-color" content="#204A79">
@@ -34,7 +34,7 @@
 <ul>
 <li id="level-1"><a href="/">Home</a></li>
 <li id="level-2"><a href="/html/materials.html">Historical Materials</a></li>
-<!-- <li id="level-3"><a href="/html/recovering-histories/rh-home.html">Recovering the Histories of Land Treaties</a></li> -->
+<li id="level-3"><a href="/html/recovering-histories/rh-home.html">Recovering the Histories of Land Treaties in East and Southern Africa</a></li>
 <li id="level-4">“High Commissioner's Notice”</li>
 </ul>
 </nav>
