--- a/html/recovering-histories/rh-home.html
+++ b/html/recovering-histories/rh-home.html
@@ -151,31 +151,31 @@
 
 						<section aria-labelledby="materials">
 							<h4 id="materials">Critical Materials</h4>
-							<ul>
-								<li>“<strong>The 1904 and 1911 Maa-British Land Agreements</strong>” (<a href="/pdf/recovering-histories/maa-british-land-agreements.pdf">PDF</a> | <a href="/pdf/recovering-histories/maa-british-land-agreements.docx">DOCX</a>)</li>
-								<li>“<strong>Makubaliano Kati ya Jamii ya Maa na Uingereza, 1904 and 1911</strong>” (<a href="/pdf/recovering-histories/makubaliano-kati-ya-jamii-ya-maa-na-uingereza.pdf">PDF</a> | <a href="/pdf/recovering-histories/makubaliano-kati-ya-jamii-ya-maa-na-uingereza.docx">DOCX</a>)</li>
-								<li>“<strong>Decolonizing LLMs Through Analysis of Land Treaty Literature and History</strong>” (<a href="/pdf/recovering-histories/decolonizing-LLMs.pdf">PDF</a> | <a href="/pdf/recovering-histories/decolonizing-LLMs.docx">DOCX</a>)</li>
-								<li>“<strong>Archives and South African History</strong>” (coming soon) (PDF | DOCX)</li>
+							<ol>
+								<li>“The 1904 and 1911 Maa-British Land Agreements” (<a href="/pdf/recovering-histories/maa-british-land-agreements.pdf">PDF</a> | <a href="/pdf/recovering-histories/maa-british-land-agreements.docx">DOCX</a>)</li>
+								<li>“Makubaliano Kati ya Jamii ya Maa na Uingereza, 1904 and 1911” (<a href="/pdf/recovering-histories/makubaliano-kati-ya-jamii-ya-maa-na-uingereza.pdf">PDF</a> | <a href="/pdf/recovering-histories/makubaliano-kati-ya-jamii-ya-maa-na-uingereza.docx">DOCX</a>)</li>
+								<li>“Decolonizing LLMs Through Analysis of Land Treaty Literature and History” (<a href="/pdf/recovering-histories/decolonizing-LLMs.pdf">PDF</a> | <a href="/pdf/recovering-histories/decolonizing-LLMs.docx">DOCX</a>)</li>
+								<li>“Archives and South African History” (coming soon) (PDF | DOCX)</li>
 								<li>“<a href="/xlsx/recovering-histories/recovering-histories-archival-metadata.xlsx">Archival Metadata</a>” (XLSX)</li>
-							</ul>
+							</ol>
 						</section>
 
 						<section aria-labelledby="editions">
 							<h4 id="editions">Critical Editions</h4>
-							<ul>
-								<li>“<a href="/html/recovering-histories/liv_022003_HTML.html"><span class="underline">High Commissioner's Notice</span></a>” [1885] (Bechuanaland)</li>
-								<li>“<a href="/html/recovering-histories/liv_022004_HTML.html"><span class="underline">Sir Hercules Robinson, Transmitting Copy Despatch from Sir C. Warren, Covering Reports of Interviews with the Chiefs Ghasitsive, Sechele, and Khama</span></a>” [1885] (Bechuanaland)</li>
-								<li><a href="/html/recovering-histories/liv_022001_HTML.html"><span class="underline">[Treaty/Agreement of 10 and 15 August 1904]</span></a> (Kenya)</li>
-								<li><a href="/html/recovering-histories/liv_022002_HTML.html"><span class="underline">[Treaty/Agreement of 4 and 13 April 1911]</span></a> (Kenya)</li>
-							</ul>
+							<ol>
+								<li>“<a href="/html/recovering-histories/liv_022003_HTML.html"><span class="underline">High Commissioner's Notice</span></a>” [1885]</li>
+								<li>“<a href="/html/recovering-histories/liv_022004_HTML.html"><span class="underline">Sir Hercules Robinson, Transmitting Copy Despatch from Sir C. Warren, Covering Reports of Interviews with the Chiefs Ghasitsive, Sechele, and Khama</span></a>” [1885]</li>
+								<li><a href="/html/recovering-histories/liv_022001_HTML.html"><span class="underline">[Treaty/Agreement of 10 and 15 August 1904]</span></a></li>
+								<li><a href="/html/recovering-histories/liv_022002_HTML.html"><span class="underline">[Treaty/Agreement of 4 and 13 April 1911]</span></a></li>
+							</ol>
 						</section>
 
 						<section aria-labelledby="activities">
 							<h4 id="activities">Activities</h4>
-							<ul>
-								<li>(UK) Collaborator meetings and site visits to the <a aria-label="External Link" href="https://www.bl.uk/">British Library</a>; the <a aria-label="External Link" href="https://www.bodleian.ox.ac.uk/">Bodleian Libraries, Oxford University</a>; <a aria-label="External Link" href="https://www.soas.ac.uk/research/library/special-collections">Special Collections, SOAS Library</a>, the <a aria-label="External Link" href="https://www.nls.uk/">National Library of Scotland</a>; and the <a aria-label="External Link" href="https://www.nationalarchives.gov.uk/">National Archives</a>; and a presentation at the <a aria-label="External Link" href="https://bavs.ac.uk/2023-conference/"><span class="underline">British Association for Victorian Studies</span></a> (BAVS) conference (Feb. and Aug. 2023)</li>
-								<li>(Kenya) Collaborator meetings and site visits to the <a aria-label="External Link" href="https://museums.or.ke/nairobi-gallery/"><span class="underline">Nairobi Gallery</span></a>, the <a aria-label="External Link" href="https://museums.or.ke/karen-blixen/"><span class="underline">Karen Blixen Museum</span></a>, the <a aria-label="External Link" href="https://museums.or.ke/nairobi-national-museum/"><span class="underline">Nairobi National Museum</span></a> in Kenya (Mar. and Oct. 2023)</li>
-						</ul>
+							<ol>
+								<li>Collaborator meetings and site visits to the <a aria-label="External Link" href="https://www.bl.uk/">British Library</a>; the <a aria-label="External Link" href="https://www.bodleian.ox.ac.uk/">Bodleian Libraries, Oxford University</a>; <a aria-label="External Link" href="https://www.soas.ac.uk/research/library/special-collections">Special Collections, SOAS Library</a>, the <a aria-label="External Link" href="https://www.nls.uk/">National Library of Scotland</a>; and the <a aria-label="External Link" href="https://www.nationalarchives.gov.uk/">National Archives</a>; and a presentation at the <a aria-label="External Link" href="https://bavs.ac.uk/2023-conference/"><span class="underline">British Association for Victorian Studies</span></a> (BAVS) conference (Feb. and Aug. 2023)</li>
+								<li>Collaborator meetings and site visits to the <a aria-label="External Link" href="https://museums.or.ke/nairobi-gallery/"><span class="underline">Nairobi Gallery</span></a>, the <a aria-label="External Link" href="https://museums.or.ke/karen-blixen/"><span class="underline">Karen Blixen Museum</span></a>, the <a aria-label="External Link" href="https://museums.or.ke/nairobi-national-museum/"><span class="underline">Nairobi National Museum</span></a> in Kenya (Mar. and Oct. 2023)</li>
+						</ol>
 					</section>
 
 					<aside class="credits" aria-labelledby="citation">
