--- a/html/materials.html
+++ b/html/materials.html
@@ -83,6 +83,20 @@
 			</section>
 
 			<section class="sections">
+
+				<!-- <div class="section-container">
+					<a href="/html/recovering-histories/rh-home.html">
+						<div class="section-image">
+							<img style="object-position: 50% 0%;" loading="lazy" width="329" height="264" src="/img/recovering-histories/tiles/liv_027048_0001_deriv-824px.jpg" srcset="/img/recovering-histories/tiles/liv_027048_0001_deriv-824px.jpg 824w, /img/recovering-histories/tiles/liv_027048_0001_deriv-660px.jpg 660w, /img/recovering-histories/tiles/liv_027048_0001_deriv-582px.jpg 582w, /img/recovering-histories/tiles/liv_027048_0001_deriv-550px.jpg 550w, /img/recovering-histories/tiles/liv_027048_0001_deriv-522px.jpg 522w, /img/recovering-histories/tiles/liv_027048_0001_deriv-504px.jpg 504w, /img/recovering-histories/tiles/liv_027048_0001_deriv-476px.jpg 476w, /img/recovering-histories/tiles/liv_027048_0001_deriv-412px.jpg 412w, /img/recovering-histories/tiles/liv_027048_0001_deriv-330px.jpg 330w, /img/recovering-histories/tiles/liv_027048_0001_deriv-291px.jpg 291w, /img/recovering-histories/tiles/liv_027048_0001_deriv-275px.jpg 275w, /img/recovering-histories/tiles/liv_027048_0001_deriv-252px.jpg 252w" sizes="(min-width: 1600px) 318px, (min-width: 1000px) calc(31.9vw - 55px), (min-width: 780px) 287px, calc(100vw - 68px)" alt="Names of several individuals, some with an “X” beside their name that is labeled as “his mark.”" />
+							<div class="image-overlay"></div>
+						</div>
+						<div aria-labelledby="recovering-histories">
+							<h3 id="recovering-histories">Recovering the Histories of Land Treaties in East and Southern Africa</h3>
+							<p>The contexts and long-term impact of land treaties<p>
+						</div>
+					</a>
+				</div> -->
+
 				<div class="section-container">
 					<a href="/html/materials/victorian_folklore.html">
 						<div class="section-image">
