--- a/html/recovering-histories/rh-home.html
+++ b/html/recovering-histories/rh-home.html
@@ -2,8 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8"/>
-		<title>Recovering the Histories of Land Treaties in East and Southern Africa | One More Voice</title><!-- Change -->
-		<meta name="description" content="."/><!-- Change -->
+		<title>Recovering the Histories of Land Treaties in East and Southern Africa | One More Voice</title>
+		<meta name="description" content="."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#204A79"/>
@@ -62,7 +62,7 @@
 			<section class="page-details horizontal">
 				<figure class="image-wrapper">
 					<!-- img sizes calculated using https://ausi.github.io/respimagelint/ -->
-					<img width="698" height="559" src="/img/recovering-histories/liv_027048_0001_deriv-1396px.jpg" srcset="/img/recovering-histories/liv_027048_0001_deriv-318px.jpg 318w, /img/recovering-histories/liv_027048_0001_deriv-478px.jpg 478w, /img/recovering-histories/liv_027048_0001_deriv-636px.jpg 636w, /img/recovering-histories/liv_027048_0001_deriv-698px.jpg 698w, /img/recovering-histories/liv_027048_0001_deriv-956px.jpg 956w, /img/recovering-histories/liv_027048_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="Names of several individuals, some with an “X” beside their name that is labeled as “his mark.”" /><!-- Change -->
+					<img width="698" height="559" src="/img/recovering-histories/liv_027048_0001_deriv-1396px.jpg" srcset="/img/recovering-histories/liv_027048_0001_deriv-318px.jpg 318w, /img/recovering-histories/liv_027048_0001_deriv-478px.jpg 478w, /img/recovering-histories/liv_027048_0001_deriv-636px.jpg 636w, /img/recovering-histories/liv_027048_0001_deriv-698px.jpg 698w, /img/recovering-histories/liv_027048_0001_deriv-956px.jpg 956w, /img/recovering-histories/liv_027048_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="Names of several individuals, some with an “X” beside their name that is labeled as “his mark.”" />
 					<figcaption class="caption-icon mobile">
 						<span class="tooltip-container">
 							<a class="caption" href="#credits" aria-label="Go to image details" aria-describedby="caption-icon-1" data-tooltip-trigger><i class="fa fa-info-circle" aria-hidden="true"></i></a>
