--- a/html/recovering-histories/rh-home.html
+++ b/html/recovering-histories/rh-home.html
@@ -146,11 +146,11 @@
 						<section aria-labelledby="materials">
 							<h4 id="materials">Critical Materials</h4>
 							<ol>
-								<li>“The 1904 and 1911 Maa-British Land Agreements” (<a href="/pdf/recovering-histories/maa-british-land-agreements.pdf">PDF</a> | <a href="/pdf/recovering-histories/maa-british-land-agreements.docx">DOCX</a>)</li>
-								<li>“Makubaliano Kati ya Jamii ya Maa na Uingereza, 1904 and 1911” (<a href="/pdf/recovering-histories/makubaliano-kati-ya-jamii-ya-maa-na-uingereza.pdf">PDF</a> | <a href="/pdf/recovering-histories/makubaliano-kati-ya-jamii-ya-maa-na-uingereza.docx">DOCX</a>)</li>
-								<li>“Decolonizing LLMs Through Analysis of Land Treaty Literature and History” (<a href="/pdf/recovering-histories/decolonizing-LLMs.pdf">PDF</a> | <a href="/pdf/recovering-histories/decolonizing-LLMs.docx">DOCX</a>)</li>
-								<li>“Archives and South African History” (coming soon) (PDF | DOCX)</li>
-								<li>“<a href="/xlsx/recovering-histories/recovering-histories-archival-metadata.xlsx">Archival Metadata</a>” (XLSX)</li>
+								<li>“<strong>The 1904 and 1911 Maa-British Land Agreements</strong>” &nbsp; <a href="/pdf/recovering-histories/maa-british-land-agreements.pdf">PDF</a> &nbsp;|&nbsp; <a href="/pdf/recovering-histories/maa-british-land-agreements.docx">DOCX</a></li>
+								<li>“<strong>Makubaliano Kati ya Jamii ya Maa na Uingereza, 1904 and 1911</strong>” &nbsp; <a href="/pdf/recovering-histories/makubaliano-kati-ya-jamii-ya-maa-na-uingereza.pdf">PDF</a> &nbsp;|&nbsp;  <a href="/pdf/recovering-histories/makubaliano-kati-ya-jamii-ya-maa-na-uingereza.docx">DOCX</a></li>
+								<li>“<strong>Decolonizing LLMs Through Analysis of Land Treaty Literature and History</strong>” &nbsp; <a href="/pdf/recovering-histories/decolonizing-LLMs.pdf">PDF</a> &nbsp;|&nbsp;  <a href="/pdf/recovering-histories/decolonizing-LLMs.docx">DOCX</a></li>
+								<li>“<strong>Archives and South African History</strong>” (coming soon) &nbsp; PDF &nbsp;|&nbsp;  DOCX</li>
+								<li>“<a href="/xlsx/recovering-histories/recovering-histories-archival-metadata.xlsx">Archival Metadata</a>” &nbsp;  XLSX</li>
 							</ol>
 						</section>
 
