--- a/html/documents/contributors.html
+++ b/html/documents/contributors.html
@@ -102,9 +102,11 @@
 					<section aria-labelledby="current">
 						<h3 id="current">Current Contributors</h3>
 
-						<p><strong>Zarena Aslami</strong> (Michigan State University, USA) – Advisor</p>
+						<p><strong>Zarena Aslami</strong> (Michigan State University, USA) – Advisor</p> 
 
-						<p><strong>Ava K. Bindas</strong> (University of California, Davis, USA) – Student Author</p> 
+						<p><strong>Mziwanda Banda</strong> (NewGlobe, Kenya) – Translator</p>
+
+						<p><strong>Ava K. Bindas</strong> (University of California, Davis, USA) – Student Author</p>
 
 						<p><strong>Pearl Chaozon Bauer </strong> (Nueva School, USA) – Advisor</p>
 
