--- a/html/recovering-histories/rh-home.html
+++ b/html/recovering-histories/rh-home.html
@@ -79,7 +79,7 @@
 						<p>Lead Contributors: <strong>Joanne Ruth Davis</strong> (SOAS, University of London; Johannesburg Institute for Advanced Study)</p>
 						<p> <strong>Jo Ichimura</strong> (SOAS, University of London)</p>
 						<p> <strong>Chao Tayiana Maina</strong> (African Digital Heritage Foundation; Museum of British Colonialism)</p>
-						<p>Translator: <strong>Onesmus Mziwanda Banda</strong></p>
+						<p>Translator: <strong>Mziwanda Banda</strong> (NewGlobe, Kenya)</p>
 					</span>
 					<p><span>Date (publication):</span> <strong>2024</strong></p>
 					<figcaption class="caption-icon desktop">
@@ -102,7 +102,7 @@
 							<p>Lead Contributors: <strong>Joanne Ruth Davis</strong> (SOAS, University of London; Johannesburg Institute for Advanced Study)</p>
 							<p> <strong>Jo Ichimura</strong> (SOAS, University of London)</p>
 							<p> <strong>Chao Tayiana Maina</strong> (African Digital Heritage Foundation; Museum of British Colonialism)</p>
-							<p>Translator: <strong>Onesmus Mziwanda Banda</strong></p>
+							<p>Translator: <strong>Mziwanda Banda</strong> (NewGlobe, Kenya)</p>
 						</span>
 					</section>
 
@@ -126,7 +126,7 @@
 
 						<p>Land treaties, as a European colonial technology, initiated the sundering of African sovereignty for the purposes of controlling natural resources and served as the basis for colonial influence and administration. To explore the history of such land treaties in Africa, our <a aria-label="External Link" href="https://www.acls.org/competitions/acls-digital-justice-seed-grants/">ACLS Digital Justice Seed Grant</a> project brought together scholars and archivists with relevant expertise in African Studies and the digital humanities (DH). Our work with such treaties engaged a body of writing that deserves to be included in contemporary criticism of literatures from the African continent.</p>
 
-						<p>Two scholars from the University of Nebraska-Lincoln, <strong>Ng’ang’a Wahu-Mũchiri</strong> (Associate Professor; Director,  <a aria-label="External Link" href="https://ardhi.unl.edu/"><em>The Ardhi Initiative</em></a>) and <strong>Adrian S. Wisnicki</strong> (Professor; Lead Developer, <a href="/index.html"><em>One More Voice</em></a>) united experience from ongoing DH initiatives centered on Africa to lead the project. Planning also drew upon the expertise of stakeholders in Kenya and the UK: <strong>Chao Tayiana Maina</strong> (Director, <a aria-label="External Link" href="https://africandigitalheritage.org/">African Digital Heritage Foundation</a>; Co-founder, <a aria-label="External Link" href="https://www.museumofbritishcolonialism.org/"><em>Museum of British Colonialism</span></em></a>), <strong>Jo Ichimura</strong> (Archivist, <a aria-label="External Link" href="https://www.soas.ac.uk/research/library/special-collections">Special Collections, SOAS Library</a>) University of London), and <strong>Joanne Ruth Davis</strong>, (Research Associate, <a aria-label="External Link" href="https://www.soas.ac.uk/">SOAS, University of London</a> and <a aria-label="External Link" href="https://www.uj.ac.za/">University of Johannesburg</a>). <strong>Onesmus Mziwanda Banda</strong>, a Kiswahili expert from Kenya, contributed by translating one of the project's critical essays.</p>
+						<p>Two scholars from the University of Nebraska-Lincoln, <strong>Ng’ang’a Wahu-Mũchiri</strong> (Associate Professor; Director,  <a aria-label="External Link" href="https://ardhi.unl.edu/"><em>The Ardhi Initiative</em></a>) and <strong>Adrian S. Wisnicki</strong> (Professor; Lead Developer, <a href="/index.html"><em>One More Voice</em></a>) united experience from ongoing DH initiatives centered on Africa to lead the project. Planning also drew upon the expertise of stakeholders in Kenya and the UK: <strong>Chao Tayiana Maina</strong> (Director, <a aria-label="External Link" href="https://africandigitalheritage.org/">African Digital Heritage Foundation</a>; Co-founder, <a aria-label="External Link" href="https://www.museumofbritishcolonialism.org/"><em>Museum of British Colonialism</span></em></a>), <strong>Jo Ichimura</strong> (Archivist, <a aria-label="External Link" href="https://www.soas.ac.uk/research/library/special-collections">Special Collections, SOAS Library</a>, University of London), and <strong>Joanne Ruth Davis</strong>, (Research Associate, <a aria-label="External Link" href="https://www.soas.ac.uk/">SOAS, University of London</a> and <a aria-label="External Link" href="https://www.uj.ac.za/">University of Johannesburg</a>). <strong>Mziwanda Banda</strong> (Author, Editor, and Translator, NewGlobe, Kenya)  translated one of the project's critical essays into Kiswahili.</p>
 
 						<span class="center vertical">
 							<img loading="lazy" class="illustration" width="" height="" src="/img/recovering-histories/liv_027058_0001_deriv-980px.jpg" srcset="/img/recovering-histories/liv_027058_0001_deriv-200px.jpg 200w, /img/recovering-histories/liv_027058_0001_deriv-312px.jpg 312w, /img/recovering-histories/liv_027058_0001_deriv-400px.jpg 400w, /img/recovering-histories/liv_027058_0001_deriv-444px.jpg 444w, /img/recovering-histories/liv_027058_0001_deriv-490px.jpg 490w, /img/recovering-histories/liv_027058_0001_deriv-624px.jpg 624w, /img/recovering-histories/liv_027058_0001_deriv-888px.jpg 888w, /img/recovering-histories/liv_027058_0001_deriv-980px.jpg 980w" sizes="(min-width: 992px) calc(700 * .7), (min-width: 768px) calc(634 * .7), (min-width: 480px) calc(.7 * (100vw - 34px)), calc(100vw - 34px)" alt="Bird's eye view of street, buildings on both sides, people and horse-drawn carriages in the street." />
@@ -176,7 +176,7 @@
 					<aside class="credits" aria-labelledby="citation">
 						<h3 id="citation">Page Citation</h3>
 
-						<p><strong>Cite (MLA):</strong> Wahu-Mũchiri, Ng’ang’a; Adrian S. Wisnicki; with Joanne Ruth Davis; Jo Ichimura; Chao Tayiana Maina; also with Onesmus Mziwanda Banda. “Recovering the Histories of Land Treaties in East and Southern Africa” (2024). <em>One More Voice</em>, solidarity edition; <em>The Ardhi Initiative</em>. <a href="/html/recovering-histories/rh-home.html">https://onemorevoice.org/html/recovering-histories/rh-home.html</a>.</p>
+						<p><strong>Cite (MLA):</strong> Wahu-Mũchiri, Ng’ang’a; Adrian S. Wisnicki; with Joanne Ruth Davis; Jo Ichimura; Chao Tayiana Maina; also with Mziwanda Banda. “Recovering the Histories of Land Treaties in East and Southern Africa” (2024). <em>One More Voice</em>, solidarity edition; <em>The Ardhi Initiative</em>. <a href="/html/recovering-histories/rh-home.html">https://onemorevoice.org/html/recovering-histories/rh-home.html</a>.</p>
 			
 						<p><strong>Rights:</strong> <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a></p>
 
