--- a/html/recovering-histories/rh-home.html
+++ b/html/recovering-histories/rh-home.html
@@ -39,7 +39,7 @@
 				<ul>
 					<li id="level-1"><a href="/">Home</a></li>
 					<li id="level-2"><a href="/html/materials.html">Historical Materials</a></li>
-					<li id="level-3"><a href="/html/recovering-histories/rh-home.html">Recovering the Histories of Land Treaties in East and Southern Africa</a></li>
+					<li id="level-3">Recovering the Histories of Land Treaties in East and Southern Africa</li>
 				</ul>
 			</nav>
 			<div class="nav-container" data-include="header">
@@ -137,7 +137,7 @@
 						
 						<p>Our project ran from 1 October 2022 to 30 June 2024. The project centered on strengthening the collaboration between stakeholders in Kenya and Britain. The inclusion of these stakeholders grew out of <em>One More Voice</em>’s emphasis on building global partnerships. In pursuing its objective, the project also prototyped workflows and collaborative partnerships to re-orient academic practices largely based in, and arising from, the United States and Britain to co-create knowledge ethically with practitioners from the Global South.</p>
 
-						<p>Additionally, the initiative spoke to African land reform policies and provided important historical contexts for land reform stakeholders, while also challenging the monopoly of European languages and practices in the digital creation of knowledge concerning the African continent. Finally, the initiative addressed the critical need for scholars of Black African descent to hold DH leadership positions by including a Kenyan scholar as one of the two co-PIs, a Kenya digital heritage specialist as one of key stakeholders and a Kenyan language expert as the translator.</p>
+						<p>Additionally, the initiative spoke to African land reform policies and provided important historical contexts for land reform stakeholders, while also challenging the monopoly of European languages and practices in the digital creation of knowledge concerning the African continent. Finally, the initiative addressed the critical need for scholars of Black African descent to hold DH leadership positions by including a Kenyan scholar as one of the two co-PIs, a Kenyan digital heritage specialist as one of the key stakeholders, and a Kenyan language expert as the translator.</p>
 					</section>
 
 					<section aria-labelledby="outcomes">
