--- a/html/sitemap.html
+++ b/html/sitemap.html
@@ -137,7 +137,7 @@
 																<a href="/pdf/recovering-histories/decolonizing-LLMs.docx">DOCX</a>
 															</li>
 															
-															<li>“Archives and South African History” (coming soon) 
+															<li>“In Search of Signatories” (coming soon) 
 																&nbsp; 
 																PDF &nbsp;|&nbsp;  DOCX
 															</li>
