--- a/html/recovering-histories/liv_022003_HTML.html
+++ b/html/recovering-histories/liv_022003_HTML.html
@@ -104,16 +104,16 @@ power.</p>
   <!-- <p id="translator"><strong>Translator(s):</strong> </p> -->
   <p id="publication-date"><strong>Publication date:</strong> (1885) 2023</p>
   <p id="publisher"><strong>Digital publishers:</strong> <a href="/"><em>One More Voice</em></a>, <a aria-label="External Link" href="https://ardhi.unl.edu"><em>The Ardhi Initiative</em></a></p>
-  <p id="encoding"><strong>Critical encoding:</strong> Adrian S. Wisnicki</p>
+  <p id="encoding"><strong>Research and critical encoding:</strong> Joanne Ruth Davis, Adrian S. Wisnicki</p>
   <p id="identifier"><strong><em>One More Voice</em> identifier:</strong> liv_022003</p>
-  <p id="citation"><strong>Cite (Chicago Author-Date):</strong> Graham Bower. (1885) 2023. “‘High Commissioner's Notice.’” Edited by Adrian S. Wisnicki. In <em>One More Voice</em>, solidarity edition; <em>The Ardhi Initiative</em>. <a href="/html/recovering-histories/liv_022003_HTML.html">https://onemorevoice.org/html/recovering-histories/liv_022003_HTML.html</a>.</p>
+  <p id="citation"><strong>Cite (Chicago Author-Date):</strong> Graham Bower. (1885) 2023. “‘High Commissioner's Notice.’” Researched by Joanne Ruth Davis; edited by Adrian S. Wisnicki. In <em>One More Voice</em>, solidarity edition; <em>The Ardhi Initiative</em>. <a href="/html/recovering-histories/liv_022003_HTML.html">https://onemorevoice.org/html/recovering-histories/liv_022003_HTML.html</a>.</p>
   <p id="rights"><strong>Rights:</strong> <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a></p>
   <!-- <p><strong>Unique page-visit stamp:</strong> <span id="page-visit">[Not shown because Javascript disabled]</span></p> -->
   <p><strong>Accessibility:</strong> <em>One More Voice</em> digital facsimiles approximate the textual, structural, and material features of original documents. However, because such features may reduce accessibility, each facsimile allows users to toggle such features on and off as needed.</p>
 </section>
 <section class="metadata" aria-labelledby="source-article-details">
   <h3 id="source-article-details">Source Issue Details</h3>
-  <p id="article-title"><strong>Issue Title:</strong> <em>The Cape of Good Hope Government Gazette</em></p>
+  <p id="article-title"><strong>Issue title:</strong> <em>The Cape of Good Hope Government Gazette</em></p>
   <!-- <p id="article-creator"><strong>Issue Creator:</strong> </p> -->
   <!-- <p id="series"><strong>Series:</strong> </p> -->
   <p id="date"><strong>Date:</strong> 24 March 1885</p>
