--- a/html/ivens-craft/ic-home.html
+++ b/html/ivens-craft/ic-home.html
@@ -306,7 +306,7 @@
 					<aside class="credits" aria-labelledby="citation">
 						<h3 id="citation">Page Citation</h3>
 
-						<p><strong>Cite (MLA):</strong> “BIPOC Voices in the Victorian Periodical Press” (2022-23). <em>One More Voice</em>, solidarity edition, 2022-23, <a href="/html/bipoc-voices/bv-home.html">https://onemorevoice.org/html/bipoc-voices/bv-home.html</a>.</p><!--Change-->
+						<p><strong>Cite (MLA):</strong> McCaffrey, Hope. "Project Home” (2024). “William Ivens Craft and the Transatlantic Victorian World,”  <em>One More Voice</em>, solidarity edition, 2022-24, <a href="/html/ivens-craft/ic-home.html">https://onemorevoice.org/html/ivens-craft/ic-home.html</a>.</p><!--Change-->
 
 						<p><strong>Rights:</strong> <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a></p>
 
@@ -316,9 +316,9 @@
 					<aside id="credits"  class="credits" aria-labelledby="image-details">
 						<h3 id="image-details">Lead Image Details</h3>
 
-						<p id="caption"><strong>Lead image caption</strong>: Joanne Ruth Davis, “Volumes of the <em>Juvenile Missionary Annual</em> (1870) and <em>Juvenile Missionary Magazine</em> (1874) from the Special Collections of SOAS Library” (Photograph, London, 2021 [1870; 1874]), CWML G455, University of London. School of Oriental and African Studies, London. <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a> (photograph); public domain (periodical volume covers).</p><!--Change-->
+						<p id="caption"><strong>Lead image caption</strong>: William Ivens Craft, “Letter to F. W. Chesson from William Ivens Craft” (Manuscript, London, 6 September 1881), MSS. Brit. Emp. S. 18, C129/134ii, Bodleian Library, Oxford, United Kingdom. Noncommercial use.</p><!--Change-->
 						
-						<p><strong>Lead image commentary</strong>: The “BIPOC Voices” project draws attention to the wide range of global creators whose works and words appear in Victorian-era missionary periodicals such as those pictured here. These elements demonstrate that the periodicals are part of a shared global heritage and that key BIPOC-related elements of the periodicals should be made available to as wide an audience as possible – a foundational idea that has inspired the “BIPOC Voices” project as a whole.</p><!--Change-->
+						<p><strong>Lead image commentary</strong>: This letter from William Ivens Craft to former abolitionist Frederick William Chesson displays William Ivens' advanced penmanship and grateful comportment, underscoring his status as an educated young man familiar with the societal mores of British elites. Nonetheless, as the son of formerly enslaved people, he struggled to support himself both in the US and in his home country of England.</p><!--Change-->
 					</aside>
 				</article>
 				<div class="decoration"></div>
