ic-small-changes

--- a/html/ivens-craft/ic-new_dreams.html
+++ b/html/ivens-craft/ic-new_dreams.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8"/>
-		<title>Returning to a New Life in the American South | One More Voice</title><!-- Change -->
+		<title> New Dreams for an Old Home | One More Voice</title><!-- Change -->
 		<meta name="description" content="Explains why William and Ellen Craft decided to return to their home country with all but two of their children after the U.S. Civil War." /><!-- Change -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
@@ -42,7 +42,7 @@
 					<li id="level-1"><a href="/">Home</a></li>
 					<li id="level-2"><a href="/html/materials.html">Historical Materials</a></li>
 					<li id="level-3"><a href="/html/ivens-craft/ic-home.html">William Ivens Craft and the Victorian Atlantic World</a></li>
-					<li id="level-4">Returning to a New Life in the American South</li><!-- Change -->
+					<li id="level-4">New Dreams for an Old Home</li><!-- Change -->
 				</ul>
 			</nav>
 			<div class="nav-container" data-include="header">
@@ -61,7 +61,7 @@
 			<div id="overlay-menu" class="overlay" data-include="overlay"></div>
 		</header>
 
-		<main id="main" aria-labelledby="returning-south"><!-- Change -->
+		<main id="main" aria-labelledby="new-dreams"><!-- Change -->
 			<section class="page-details horizontal">
 				<figure class="image-wrapper">
 					<!-- img sizes calculated using https://ausi.github.io/respimagelint/ -->
@@ -76,7 +76,7 @@
 
 				<div>
 					<span>
-						<h2 id="returning-south">Returning to a New Life in the American South</h2><!-- Change -->
+						<h2 id="new-dreams">New Dreams for an Old Home</h2><!-- Change -->
 						<ul class="publication-details">
 							<li><span>Date (publication and updates):</span> <strong>2024</strong></li>
 						</ul>
@@ -165,7 +165,7 @@
 					<aside class="credits" aria-labelledby="citation">
 						<h3 id="citation">Page Citation</h3>
 
-						<p><strong>Cite (MLA):</strong> McCaffrey, Hope. “Returning to a New Life in the American South” (2024). “William Ivens Craft and the Transatlantic Victorian World,” <em>One More Voice</em>, solidarity edition, 2022-24, <a href="/html/ivens-craft/ic-returning_south.html">https://onemorevoice.org/html/ivens-craft/ic-returning_south.html</a>.</p><!-- Change -->
+						<p><strong>Cite (MLA):</strong> McCaffrey, Hope. “New Dreams for Old Home” (2024). “William Ivens Craft and the Transatlantic Victorian World,” <em>One More Voice</em>, solidarity edition, 2022-24, <a href="/html/ivens-craft/ic-new_dreams.html">https://onemorevoice.org/html/ivens-craft/ic-new_dreams.html</a>.</p><!-- Change -->
 					
 						<p><strong>Rights:</strong> <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a></p>
 
