--- a/html/ivens-craft/ic-home.html
+++ b/html/ivens-craft/ic-home.html
@@ -131,13 +131,13 @@
 					</div>
 
 					<div class="section-container"><!-- for pages of your site; repeat as needed-->
-						<a href="/html/ivens-craft/ic-returning_south.html"><!--Change-->
+						<a href="/html/ivens-craft/ic-new_dreams.html"><!--Change-->
 							<div class="section-image">
 								<img width="504" height="403" style="object-position: 50% 35%;" src="/img/ivens-craft/tiles/liv_028134_0001_deriv-824px.jpg" srcset="/img/ivens-craft/tiles/liv_028134_0001_deriv-824px.jpg 824w, /img/ivens-craft/tiles/liv_028134_0001_deriv-660px.jpg 660w, /img/ivens-craft/tiles/liv_028134_0001_deriv-582px.jpg 582w, /img/ivens-craft/tiles/liv_028134_0001_deriv-550px.jpg 550w, /img/ivens-craft/tiles/liv_028134_0001_deriv-522px.jpg 522w, /img/ivens-craft/tiles/liv_028134_0001_deriv-504px.jpg 504w, /img/ivens-craft/tiles/liv_028134_0001_deriv-476px.jpg 476w, /img/ivens-craft/tiles/liv_028134_0001_deriv-412px.jpg 412w, /img/ivens-craft/tiles/liv_028134_0001_deriv-330px.jpg 330w, /img/ivens-craft/tiles/liv_028134_0001_deriv-291px.jpg 291w, /img/ivens-craft/tiles/liv_028134_0001_deriv-275px.jpg 275w, /img/ivens-craft/tiles/liv_028134_0001_deriv-252px.jpg 252w" sizes="(min-width: 1600px) 318px, (min-width: 1000px) calc(31.9vw - 55px), (min-width: 780px) 287px, calc(100vw - 68px)" alt="A group of people gather around a table as a soldier reads a large piece of paper by torchlight." /><!--Change-->
 								<div class="image-overlay"></div>
 							</div>
-							<div aria-labelledby="returning-south">
-								<h4 id="returning-south">Returning to a New Life in the American South</h4><!--Change-->
+							<div aria-labelledby="new-dreams">
+								<h4 id="new-dreams">New Dreams for an Old Home</h4><!--Change-->
 								<p></p><!--Change-->
 							</div>
 						</a>
